--- a/MediationServer/Web.config
+++ b/MediationServer/Web.config
@@ -5,9 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\Users\eviat\documents\visual studio 2015\Projects\MiniTorrent\WebPortal\App_Data\DB.mdf&quot;;Integrated Security=True"
-      providerName="System.Data.SqlClient" /> 
-    <add name="DALConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\Users\eviat\documents\visual studio 2015\Projects\MiniTorrent\WebPortal\App_Data\DAL.mdf&quot;;Integrated Security=True;Connect Timeout=30"
+    <add name="DALConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\Users\eviat\documents\visual studio 2015\Projects\MiniTorrent\WebPortal\App_Data\DAL.mdf&quot;;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
