--- a/MediationServer/bin/MediationServer.dll.config
+++ b/MediationServer/bin/MediationServer.dll.config
@@ -29,7 +29,7 @@
   </system.net>-->
 
   <connectionStrings>
-    <add name="DALConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\Users\eviat\documents\visual studio 2015\Projects\MiniTorrent\WebPortal\App_Data\DAL.mdf&quot;;Integrated Security=True"
+    <add name="DALConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;C:\All Projects\Visual Studio\MiniTorrent\WebPortal\App_Data\DAL.mdf&quot;;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
